java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateParam5-hints.pass
Create field foo in org.netbeans.test.java.hints.CreateParam5
Create parameter foo
Create local variable foo
